--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,18 @@ services:
       MYSQL_PASSWORD: senha123
     volumes:
     - mysql_data_container:/data/db
+volumes:
+  mysql_data_container:
+#  mongo:
+#    image: mongo
+#    ports:
+#      - 27017:27017
+#    restart: always
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: rasmoo
+#      MONGO_INITDB_ROOT_PASSWORD: senha123
+#    volumes:
+#    - mongo_data_container:/data/db
+#volumes:
+#  mysql_data_container:
+#  mongo_data_container:
