Concluido a parte de processamento de pagamento Criando a camada de mail integration Expondo o novo recurso process de pagamento.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.password=senha123
 
 spring.flyway.enable=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=******
+spring.mail.password=*****
+spring.mail.properties.mail.smtp.outh=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 webservices.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
 webservices.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
 webservices.raspay.v1.order=${RASPAY_ORDER:/v1/order}
